Tweak documentation